[gd_scene load_steps=42 format=2]

[ext_resource path="res://Graphics/Character Sprites/Enemies/FlyOV.png" type="Texture" id=1]
[ext_resource path="res://Nodes/Reusables/Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Ui/emotes.tscn" type="PackedScene" id=3]
[ext_resource path="res://Graphics/Character Sprites/Shadow.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Main/Basic Enemy.gd" type="Script" id=5]
[ext_resource path="res://Shaders/Flash.tres" type="Material" id=6]
[ext_resource path="res://Audio/Sound effects/M3/bash.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=151]
extents = Vector2( 7.87464, 5.31516 )

[sub_resource type="RectangleShape2D" id=156]
extents = Vector2( 5.5, 4 )

[sub_resource type="CircleShape2D" id=157]
radius = 35.2816

[sub_resource type="Animation" id=129]
length = 0.0833333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=132]
length = 0.0833333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=133]
length = 0.0833333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=134]
length = 0.0833333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}

[sub_resource type="Animation" id=145]
length = 0.0833333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("main:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=153]
length = 0.166667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("main:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main:material:shader_param/flash_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.12549, 0.12549, 0.12549, 1 ), Color( 0.709804, 0.027451, 0.172549, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=154]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("main:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main:material:shader_param/flash_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("main:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("main:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=155]
resource_name = "Stun"
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -7 ), Vector2( 1, -7 ), Vector2( 0, -7 ), Vector2( 1, -7 ), Vector2( 0, -7 ), Vector2( 1, -7 ), Vector2( 0, -7 ), Vector2( 1, -7 ), Vector2( 0, -7 ), Vector2( 1, -7 ), Vector2( 0, -7 ), Vector2( 1, -7 ), Vector2( 0, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("main:material:shader_param/flash_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=116]
animation = "Idle Down"

[sub_resource type="AnimationNodeAnimation" id=117]
animation = "Idle Up"

[sub_resource type="AnimationNodeAnimation" id=118]
animation = "Idle Right"

[sub_resource type="AnimationNodeAnimation" id=119]
animation = "Idle Left"

[sub_resource type="AnimationNodeBlendSpace2D" id=93]
blend_point_0/node = SubResource( 116 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 117 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 118 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 119 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=120]
animation = "Idle Down"

[sub_resource type="AnimationNodeAnimation" id=121]
animation = "Idle Left"

[sub_resource type="AnimationNodeAnimation" id=122]
animation = "Idle Right"

[sub_resource type="AnimationNodeAnimation" id=123]
animation = "Idle Up"

[sub_resource type="AnimationNodeBlendSpace2D" id=111]
blend_point_0/node = SubResource( 120 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 121 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 122 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 123 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=124]
animation = "Idle Up"

[sub_resource type="AnimationNodeAnimation" id=125]
animation = "Idle Down"

[sub_resource type="AnimationNodeAnimation" id=126]
animation = "Idle Left"

[sub_resource type="AnimationNodeAnimation" id=127]
animation = "Idle Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=98]
blend_point_0/node = SubResource( 124 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 125 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 126 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 127 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=99]

[sub_resource type="AnimationNodeStateMachineTransition" id=100]

[sub_resource type="AnimationNodeStateMachineTransition" id=112]

[sub_resource type="AnimationNodeStateMachineTransition" id=113]

[sub_resource type="AnimationNodeStateMachineTransition" id=114]

[sub_resource type="AnimationNodeStateMachineTransition" id=115]

[sub_resource type="AnimationNodeStateMachine" id=101]
states/Idle/node = SubResource( 93 )
states/Idle/position = Vector2( 116, 181.667 )
states/Talk/node = SubResource( 111 )
states/Talk/position = Vector2( 418, 207 )
states/Walk/node = SubResource( 98 )
states/Walk/position = Vector2( 273, 72 )
transitions = [ "Idle", "Walk", SubResource( 99 ), "Walk", "Idle", SubResource( 100 ), "Idle", "Talk", SubResource( 112 ), "Talk", "Idle", SubResource( 113 ), "Talk", "Walk", SubResource( 114 ), "Walk", "Talk", SubResource( 115 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, 16.4427 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=150]

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 0, -3 )
collision_layer = 516
collision_mask = 512
collision/safe_margin = 0.4
script = ExtResource( 5 )
acceleration = 800
friction = 800
walk_frequency = 0.5

[node name="Shadow" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 6 )
texture = ExtResource( 4 )

[node name="main" type="Sprite" parent="."]
material = ExtResource( 6 )
position = Vector2( 0, -7 )
texture = ExtResource( 1 )
hframes = 2
vframes = 4
frame = 6

[node name="emotes" parent="main" instance=ExtResource( 3 )]
position = Vector2( 0, -33 )

[node name="Position2D" type="Position2D" parent="."]
rotation = 1.5708

[node name="ViewArea" type="Area2D" parent="Position2D"]
collision_layer = 256
collision_mask = 0
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Position2D/ViewArea"]
position = Vector2( 9, 0 )
rotation = -1.57079
polygon = PoolVector2Array( 0, -6, -8, -6, -47.9998, 34.0003, -15.9993, 66.0002, 16.0007, 65.9998, 48.0002, 33.9997, 8, -6 )

[node name="BlindSpot" type="Area2D" parent="Position2D"]
rotation = 3.14159
collision_layer = 256
collision_mask = 0
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Position2D/BlindSpot"]
position = Vector2( 9, 0 )
rotation = -1.57079
polygon = PoolVector2Array( 0, -6, -8, -6, -34.9994, 95.0002, 37.0006, 94.9998, 8, -6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 513

[node name="EventDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 90, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -10, 0, 20, 10 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.5, 3 )
polygon = PoolVector2Array( 9.5, 3, 0, 7, -9.5, 3, 0, -1 )

[node name="interact" type="Area2D" parent="."]
position = Vector2( 0, -7 )
collision_layer = 2561
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact"]
modulate = Color( 0, 1, 0.717647, 1 )
position = Vector2( 2.38419e-07, 10 )
shape = SubResource( 151 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -6 )
collision_layer = 0
collision_mask = 62

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.5, -1 )
shape = SubResource( 156 )

[node name="WanderRadius" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WanderRadius"]
position = Vector2( 0, -2 )
shape = SubResource( 157 )

[node name="Timer" type="Timer" parent="WanderRadius"]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Idle Down" = SubResource( 129 )
"anims/Idle Left" = SubResource( 132 )
"anims/Idle Right" = SubResource( 133 )
"anims/Idle Up" = SubResource( 134 )
anims/RESET = SubResource( 145 )

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 153 )
anims/RESET = SubResource( 154 )
anims/Stun = SubResource( 155 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 101 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 150 )
parameters/Idle/blend_position = Vector2( -0.00585282, 0.00892854 )
parameters/Talk/blend_position = Vector2( -0.00132799, -0.00578034 )
parameters/Walk/blend_position = Vector2( -0.544253, 0.277344 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
bus = "SFX"

[connection signal="tree_exiting" from="." to="." method="_on_Enemy_tree_exiting"]
[connection signal="body_entered" from="Position2D/ViewArea" to="." method="_on_ViewArea_body_entered"]
[connection signal="body_exited" from="Position2D/ViewArea" to="." method="_on_ViewArea_body_exited"]
[connection signal="body_entered" from="Position2D/BlindSpot" to="." method="_on_BlindSpot_body_entered"]
[connection signal="body_exited" from="Position2D/BlindSpot" to="." method="_on_BlindSpot_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="body_entered" from="interact" to="." method="_on_interact_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="WanderRadius/Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="DamageAnimation" to="." method="_on_DamageAnimation_animation_finished"]
